implements flow for first endpoint
first endpoint initializes an empty cart

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,13 +11,13 @@ spring:
     username: ${PG_USR}
     password: ${PG_PWD}
   jpa:
-    show-sql: true
+#    show-sql: true
     hibernate:
       ddl-auto: update
     defer-datasource-initialization: true
     properties:
       hibernate:
-        format_sql: true
+#        format_sql: true
 logging:
   level:
     org:
